--- a/style.css
+++ b/style.css
@@ -16,17 +16,16 @@
     padding: 0px;
 }
 header{
-    padding: 10px;
+    padding: 10px 0px;
     font-family: 'bebas Neue' ;
     background-image:linear-gradient(to top, var(--cor1), var(--cor0));
-    min-width: 300px;
+  
     text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.288);
     margin-left: 0px;
     margin-bottom: 0px;
-    
-    min-height: 170px;
-    max-height: 300px;
-    
+    min-height: 100px;
+    max-height: 196px;
+
 }
 
 header h1{
@@ -40,11 +39,8 @@ header h1{
 
 
 header nav{
-    margin-left: -10px;
-    max-width: 1960px;
-    min-width: 0px;
-    margin-right: -13px;
-  
+    margin: auto;
+
     background-color: var(--cor1);
     padding: 2px;
 }
@@ -71,14 +67,13 @@ body{
     background-color: var(--cor0);
 }
 main{
-    
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.386);
-
+    
    text-align: justify  ;
    max-width: 800px;
-   min-width: 300px;
-    margin: auto;
-    margin-top: 0px;
+   min-width: 285px;
+   margin: auto;
+   margin-top: 0px;
    padding: 20px;
    background-color: wheat;
    
